trybuild_tests/tests/trybuild/pass/fieldtype_newtype_multiple.rs
use butane::FieldType;
use serde::{Deserialize, Serialize};

// This should fail - newtype with multiple fields
#[derive(Deserialize, FieldType, Serialize)]
pub struct MultiField(i32, String);

fn main() {}
